syntax = "proto3";
option java_multiple_files = true;
package demo.interfaces.grpc;

message Assignment {
    int64 assignmentID = 1;
    int64 GroupID = 2;
    int64 projectID = 3;
    string description = 4;
}


// The Assignment Service Definition
service AssignmentService {
        
    // Get Assignment using Group ID
    // server streaming RPCs where the client sends a request to the server and gets a stream to read a sequence of messages back. The client reads from the returned stream until there are no more messages. gRPC guarantees message ordering within an individual RPC call.
    rpc getAssignmentByGroup (Assignment) returns (stream Assignment) {
    }
    
}